--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_smart_dialog: ^4.9.8+7
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
+  pretty_dio_logger: ^1.4.0
 
 
 dev_dependencies:
