--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
   pretty_dio_logger: ^1.4.0
+  webview_flutter: ^4.11.0
 
 
 dev_dependencies:
