--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   googleapis: ^14.0.0
   googleapis_auth: ^2.0.0
   url_launcher: ^6.3.1
+  carousel_slider: ^5.0.0
 
 
 dev_dependencies:
