--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 .swiftpm/
 migrate_working_dir/
 
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -45,3 +46,26 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 /lib/const/url_const.dart
+
+
+android/app/.cxx/Debug/3g10541u/x86_64/.cmake/api/v1/reply/index-2025-05-19T06-32-17-0985.json
+android/app/.cxx/Debug/3g10541u/arm64-v8a/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/arm64-v8a/.cmake/api/v1/reply/index-2025-05-18T07-14-47-0659.json
+android/app/.cxx/Debug/3g10541u/arm64-v8a/.cmake/api/v1/reply/index-2025-05-19T06-32-16-0285.json
+android/app/.cxx/Debug/3g10541u/armeabi-v7a/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/armeabi-v7a/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0108.json
+android/app/.cxx/Debug/3g10541u/armeabi-v7a/.cmake/api/v1/reply/index-2025-05-19T06-32-17-0120.json
+android/app/.cxx/Debug/3g10541u/x86/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/x86/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0546.json
+android/app/.cxx/Debug/3g10541u/x86/.cmake/api/v1/reply/index-2025-05-19T06-32-17-0585.json
+android/app/.cxx/Debug/3g10541u/x86_64/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/x86_64/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0956.json
+android/app/.cxx/Debug/3g10541u/arm64-v8a/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/arm64-v8a/.cmake/api/v1/reply/index-2025-05-18T07-14-47-0659.json
+android/app/.cxx/Debug/3g10541u/armeabi-v7a/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/armeabi-v7a/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0108.json
+android/app/.cxx/Debug/3g10541u/x86/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/x86/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0546.json
+android/app/.cxx/Debug/3g10541u/x86_64/configure_fingerprint.bin
+android/app/.cxx/Debug/3g10541u/x86_64/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0956.json
+android/app/.cxx/Debug/3g10541u/x86_64/.cmake/api/v1/reply/index-2025-05-18T07-14-48-0956.json
