--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   url_launcher: ^6.3.1
   carousel_slider: ^5.0.0
   flutter_stripe: ^10.1.0
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
