--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_stripe: ^10.1.0
   cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
+  intl: ^0.20.2
 
 
 dev_dependencies:
