--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
   intl: ^0.20.2
+  pin_code_fields: ^8.0.1
 
 
 dev_dependencies:
