--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   chewie: ^1.11.3
   skeletonizer: ^1.4.3
+  dotted_border: ^2.1.0
 
 
 dev_dependencies:
