--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   skeletonizer: ^1.4.3
   dotted_border: ^2.1.0
   webview_flutter_wkwebview: ^3.22.0
+  image_picker: ^1.1.2
 
 
 dev_dependencies:
